<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileSaveDialog"
    android:layout_width="325dp"
    android:layout_height="225dp"
    android:background="@drawable/background_with_shape"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="center"
            android:text="@string/type_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </FrameLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center" >
        
        <TextView 
            android:id="@+id/saveDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save_description"
            android:textColor="@color/white" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_white"
            android:hint="@string/textHint"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:maxLength="32" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_button"
            android:drawableRight="@android:drawable/ic_menu_save"
            android:onClick="onClickSave"
            android:text="@string/save_game"
            android:textColor="@color/black" />

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>