<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".25"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/profileListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/profile_list_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        
        <dk.aau.cs.giraf.train.profile.CustomListView
            android:id="@+id/profilelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".25"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/gameListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/game_list_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/customisationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/customisation_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        
    </LinearLayout>
    
</LinearLayout>